<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">噗浪姬</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="PLURK_REQUEST_URL">http://www.plurk.com/OAuth/request_token</string>
    <string name="PLURK_AUTHORIZATION_URL">http://www.plurk.com/m/authorize</string>
    <string name="PLURK_ACCESS_URL">http://www.plurk.com/OAuth/access_token</string>
    <string name="PLURK_CALLBACK_URL">myplurk:///</string>
    <string name="PLURK_CONSUMER_KEY">a</string>
    <string name="PLURK_CONSUMER_SECRET ">b</string>
    <string name="IntroduceSelf">關於自己</string>
    <string name="FriendList">好友列表</string>
    <string name="Nickname">暱稱</string>
    <string name="full_name">全名</string>
    <string name="account">帳號</string>
    <string name="karma">Karma</string>
    <string name="FriendCount">朋友數</string>
    <string name="FanCount">粉絲數</string>
    <string name="TabProfile">個人資料</string>
    <string name="TabFriendList">朋友清單</string>

</resources>
