<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
	android:stretchColumns="0,1,2">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <TextView
	        android:id="@+id/txtView_Account"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/account" />
	    <TextView
	        android:id="@+id/txtView_showAccount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
			android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
	    <TextView
	        android:id="@+id/txtView_full_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/full_name" />
	    <TextView
	        android:id="@+id/txtView_showfull_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
			android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
	    <TextView
	        android:id="@+id/txtView_Nickname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Nickname" />
	    <TextView
	        android:id="@+id/txtView_showNickname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
			android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
	    <TextView
	        android:id="@+id/txtView_Karma"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/karma" />
	    <TextView
	        android:id="@+id/txtView_showKarma"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
			android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
	    <TextView
	        android:id="@+id/txtView_FriendCount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/FriendCount" />
	    <TextView
	        android:id="@+id/txtView_showFriendCount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
			android:layout_span="2"/>
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
	    <TextView
	        android:id="@+id/txtView_FanCount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/FanCount" />
	    <TextView
	        android:id="@+id/txtView_showFanCount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
			android:layout_span="2"/>
    </TableRow>
</TableLayout>